# librarian

./: .golangci.yaml  all_test.go  go.mod
.github/workflows/: rust.yaml
cmd/: doc_generate.go  doc_generate_test.go
cmd/legacyautomation/: doc.go  main.go
cmd/legacylibrarian/: doc.go  main.go
cmd/librarian/: main.go
cmd/surfer/: main.go
devtools/cmd/migrate-sidekick/: main.go  main_test.go
devtools/cmd/migrate-sidekick/testdata/read-sidekick-files/success-read/: .sidekick.toml  Cargo.toml
devtools/cmd/migrate-sidekick/testdata/read-sidekick-files/success-read/nested/: .sidekick.toml  Cargo.toml
doc/: surfer.md
internal/config/: config.go  config_test.go  language.go
internal/config/bazel/: parser.go  parser_test.go
internal/config/gapicyaml/: config.go  config_test.go
internal/config/grpcserviceconfig/: config_test.go
internal/fetch/: cache.go  cache_test.go  fetch.go  fetch_test.go
internal/legacylibrarian/legacyautomation/: automation.go  automation_test.go  cli.go  cli_test.go  cloudbuild.go  cloudbuild_test.go  flags.go  generate.go  generate_test.go  help.go  publish_release.go  publish_release_test.go  repositories.go  repositories_test.go  stage_release.go  stage_release_test.go  trigger.go  trigger_test.go
internal/librarian/: generate.go  generate_test.go  librarian.go  library.go  library_test.go  release.go  release_test.go  testhelper.go  testhelper_test.go  tidy.go  tidy_test.go  version.go  version_test.go
internal/librarian/internal/rust/testdata/: Cargo.toml
internal/repometadata/: repometadata.go  repometadata_test.go
internal/semver/: semver.go  semver_test.go
internal/serviceconfig/: serviceconfig.go  serviceconfig_test.go
internal/surfer/: README.md
internal/yaml/: ref.go  ref_test.go  yaml.go  yaml_test.go
(+110 files in other folders)
