[package]
name                   = "google-cloud-sql-v1"
description            = "Google Cloud Client Libraries for Rust - Cloud SQL Admin API"
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
keywords.workspace     = true
categories.workspace   = true
rust-version.workspace = true
publish                = false

[dependencies]
async-trait.workspace = true
bytes.workspace      = true
gax.workspace        = true
gaxi                 = { workspace = true, features = ["_internal-http-client"] }
lazy_static.workspace = true
reqwest.workspace    = true
serde.workspace      = true
serde_json.workspace = true
serde_with.workspace = true
tracing.workspace    = true
wkt.workspace        = true

[dev-dependencies]
tokio-test.workspace = true
